--- a/sito-web-laboratorio/styles/videogames_styles.css
+++ b/sito-web-laboratorio/styles/videogames_styles.css
@@ -7,6 +7,118 @@ body {
   color: #1a1a1a;
   overflow-x: hidden;
 }
+
+header {
+  width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background-color: #3e4e21;
+}
+
+nav {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 1rem;
+  width: 100%;
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  flex-wrap: wrap;
+}
+
+nav ul li {
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+nav ul li:hover .dropdown-content,
+nav ul li:focus-within .dropdown-content,
+nav ul li:active .dropdown-content {
+  display: flex;
+  flex-direction: row;
+  opacity: 1;
+}
+
+nav ul li a {
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
+  color: white;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+#event_map {
+  width: 1000px;
+  height: auto;
+  display: block;
+  margin: 20px auto;
+  -webkit-mask-image: radial-gradient(
+    circle,
+    rgb(135, 5, 5) 60%,
+    rgba(185, 14, 14, 0) 100%
+  );
+  mask-image: radial-gradient(
+    circle,
+    rgb(129, 40, 40) 60%,
+    rgba(76, 9, 9, 0) 100%
+  );
+
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+
+  -webkit-mask-position: center;
+  mask-position: center;
+
+  -webkit-mask-size: cover;
+  mask-size: cover;
+}
+.dropdown {
+  padding: 10px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  top: 100%;
+  left: 0;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease, visibility 0.3s;
+  padding: 10px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content a {
+  color: white;
+  margin: 0 10px;
+  padding: 16px 32px;
+  text-decoration: none;
+  white-space: nowrap;
+  transition: background-color 0.3s ease;
+}
+
+.dropdown-content a:hover {
+  background-color: transparent;
+}
+
+nav ul li a:hover,
+nav ul li a.active {
+  background-color: transparent;
+  color: rgb(255, 0, 0);
+  transform: scale(1.1);
+}
+
 h1 {
   font-family: "Creepster", cursive;
   color: #800080;
@@ -21,11 +133,16 @@ h1 {
   max-width: 1200px;
   margin: 20px auto;
   padding: 20px;
-  background-color: #292939;
+  background: linear-gradient(
+    to bottom,
+    rgba(102, 51, 153, 0.8),
+    rgba(255, 140, 0, 0.8)
+  ); /* Sfumatura viola-arancione trasparente */
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   text-align: center;
 }
+
 .activity-section h2 {
   font-family: "Creepster", cursive;
   color: #ffa31a;
