--- a/sito-web-laboratorio/styles/videogames_styles.css
+++ b/sito-web-laboratorio/styles/videogames_styles.css
@@ -3,9 +3,37 @@ body {
   margin: 0;
   padding: 0;
   line-height: 1.6;
-  background-color: #ff8c00;
   color: #1a1a1a;
   overflow-x: hidden;
+}
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(128, 0, 128, 0.7), rgba(210, 90, 20, 0.7));
+  z-index: -2;
+  animation: mistyHalloweenBackground 10s infinite alternate;
+}
+
+@keyframes mistyHalloweenBackground {
+  0% {
+    background: linear-gradient(rgba(128, 0, 128, 0.7), rgba(210, 90, 20, 0.9));
+    opacity: 0.7;
+  }
+  50% {
+    background: linear-gradient(rgba(75, 0, 130, 0.8), rgba(190, 70, 10, 0.6));
+    opacity: 0.8;
+  }
+  100% {
+    background: linear-gradient(
+      rgba(110, 0, 140, 0.9),
+      rgba(230, 100, 30, 0.7)
+    );
+    opacity: 0.9;
+  }
 }
 
 header {
@@ -121,11 +149,18 @@ nav ul li a.active {
 
 h1 {
   font-family: "Creepster", cursive;
-  color: #800080;
   text-align: center;
-  margin: 20px 0;
-  font-size: 4em;
-  text-shadow: 2px 2px 10px rgba(128, 0, 128, 0.7);
+  letter-spacing: 2px;
+  font-size: 4.2rem;
+  background-image: linear-gradient(
+    to bottom,
+    rgb(255, 0, 0) 0%,
+    rgb(75, 0, 0) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
 
 .activity-section {
