--- a/sito-web-laboratorio/styles/navbar_style.css
+++ b/sito-web-laboratorio/styles/navbar_style.css
@@ -1,13 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Eater&display=swap');
+
 /* Responsive Navigation */
 header {
   width: 100%;
   position: sticky;
   top: 0;
   z-index: 100;
-  background-color: #3e4e21;
+  background-color: #000;
 }
 
 nav {
+  font-family: 'Eater', cursive;
   background-color: rgba(0, 0, 0, 0.7);
   color: white;
   padding: 1rem;
