--- a/sito-web-laboratorio/styles/bottombar_styles.css
+++ b/sito-web-laboratorio/styles/bottombar_styles.css
@@ -34,4 +34,12 @@ footer .dropdown .social {
   height: 30px;
   margin-top: 20px;
   margin-bottom: 20px;
+  filter: grayscale(100%); 
+  transition: all 0.3s ease; 
+  transform: scale(1);
+}
+
+footer .dropdown .social:hover {
+  filter: grayscale(0%); 
+  transform: scale(1.6);
 }
