--- a/sito-web-laboratorio/styles/home_styles.css
+++ b/sito-web-laboratorio/styles/home_styles.css
@@ -1,29 +1,3 @@
-/* Existing styles with modifications */
-@import url('https://fonts.googleapis.com/css2?family=Nosifer&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Eater&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap');
-
-body {
-  font-family: 'Jolly Lodger', cursive;
-  margin: 0;
-  padding: 0;
-  line-height: 1.6;
-  color: #1a1a1a;
-  overflow-x: hidden;
-}
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(rgb(12, 12, 12), rgba(30, 30, 30));
-  z-index: -2;
-  animation: mistyHalloweenBackground 10s infinite alternate ease-in-out 0.3s;
-}
-
-
 /* Map_Gamescon Style */
 #event_map {
   width: 1000px;
@@ -88,7 +62,7 @@ body::before {
 }
 
 nav {
-  font-family: 'Eater', cursive;
+  font-family: "Eater", cursive;
 }
 
 nav ul li a:hover,
@@ -193,7 +167,6 @@ nav ul li a.active {
   cursor: pointer;
   font-family: "Nosifer", cursive;
   letter-spacing: 1px;
-  
 }
 
 .acquista-btn {
@@ -432,10 +405,9 @@ h1 {
   color: transparent;
 }
 h2 {
-  font-family: 'Eater', cursive;
+  font-family: "Eater", cursive;
   text-align: center;
   font-size: 1.5rem;
-
 }
 
 hr {
