--- a/sito-web-laboratorio/styles/theme_style.css
+++ b/sito-web-laboratorio/styles/theme_style.css
@@ -3,6 +3,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Nosifer&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Eater&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Unkempt&display=swap"); /* New font (Unkempt) Text*/
+@import url("https://fonts.googleapis.com/css2?family=Fredoka&display=swap"); /* New font (Fredoka) Buttons and NavBar*/
 
 body {
   font-family: "Jolly Lodger", cursive;
