--- a/sito-web-laboratorio/styles/home_styles.css
+++ b/sito-web-laboratorio/styles/home_styles.css
@@ -24,53 +24,6 @@
   -webkit-mask-size: cover;
   mask-size: cover;
 }
-/* Dropdown Styles */
-
-.dropdown {
-  padding: 10px;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.8);
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  top: 100%;
-  left: 0;
-  border-radius: 5px;
-  opacity: 0;
-  transition: opacity 0.3s ease, visibility 0.3s;
-  padding: 10px;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown-content a {
-  color: white;
-  margin: 0 10px;
-  padding: 16px 32px;
-  text-decoration: none;
-  white-space: nowrap;
-  transition: background-color 0.3s ease;
-}
-
-.dropdown-content a:hover {
-  background-color: transparent;
-}
-
-nav {
-  font-family: "Eater", cursive;
-}
-
-nav ul li a:hover,
-nav ul li a.active {
-  background-color: transparent;
-  color: rgb(255, 0, 0);
-  transform: scale(1.1);
-}
 
 #carousel {
   position: relative;
@@ -118,6 +71,12 @@ nav ul li a.active {
       transparent 100%
     );
   mask-composite: intersect;
+}
+
+#titleImage {
+  align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 #ticket-counter {
