--- a/sito-web-laboratorio/styles/contatti_styles.css
+++ b/sito-web-laboratorio/styles/contatti_styles.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Creepster&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400&display=swap");
-
+body {
+  color: aliceblue;
+}
 #registration-form {
   width: 90%;
   max-width: 400px;
