--- a/sito-web-laboratorio/styles/theme_style.css
+++ b/sito-web-laboratorio/styles/theme_style.css
@@ -7,7 +7,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka&display=swap"); /* New font (Fredoka) Buttons and NavBar*/
 
 body {
-  font-family: "Jolly Lodger", cursive;
+  font-family: "Unkempt", cursive;
   margin: 0;
   padding: 0;
   line-height: 1.6;
