--- a/sito-web-laboratorio/styles/videogames_styles.css
+++ b/sito-web-laboratorio/styles/videogames_styles.css
@@ -110,7 +110,7 @@ nav ul li a.active {
 }
 
 h1 {
-  font-family: "Creepster", cursive;
+  font-family: "Unkempt", cursive;
   text-align: center;
   letter-spacing: 2px;
   font-size: 4.2rem;
@@ -134,7 +134,7 @@ h1 {
 }
 
 .activity-section h2 {
-  font-family: "Creepster", cursive;
+  font-family: "Unkempt", cursive;
   color: #ffa31a;
   font-size: 2em;
   margin-bottom: 15px;
