--- a/sito-web-laboratorio/styles/areacommerciale_styles.css
+++ b/sito-web-laboratorio/styles/areacommerciale_styles.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Creepster&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400&display=swap");
-
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -8,7 +5,7 @@
 }
 
 h1 {
-  font-family: "Creepster", cursive;
+  font-family: "Unkempt", cursive;
   text-align: center;
   letter-spacing: 2px;
   font-size: 3.2rem;
@@ -25,13 +22,13 @@ h1 {
 
 h2,
 p {
-  font-family: "Orbitron", sans-serif;
+  font-family: "Unkempt", cursive;
   text-align: center;
   margin-bottom: 30px;
 }
 
 .descrizione-area {
-  font-family: "Orbitron", sans-serif;
+  font-family: "Unkempt", cursive;
   background: linear-gradient(135deg, #5c2680c2, #d87d15);
   padding: 30px;
   border-radius: 15px;
