--- a/sito-web-laboratorio/styles/home_styles.css
+++ b/sito-web-laboratorio/styles/home_styles.css
@@ -25,6 +25,13 @@
   mask-size: cover;
 }
 
+#logo {
+  font-size: 100px;
+  color: rgb(255, 145, 0);
+  text-shadow: -1px -1px 0 green, 1px -1px 0 green, -1px 1px 0 green,
+    1px 1px 0 green;
+}
+
 #carousel {
   position: relative;
   width: 100%;
@@ -87,7 +94,7 @@
 .dates-container {
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 60px;
 }
 
 .date-circle {
@@ -124,7 +131,7 @@
   border: none;
   padding: 10px 20px;
   cursor: pointer;
-  font-family: "Nosifer", cursive;
+  font-family: "Fredoka", cursive;
   letter-spacing: 1px;
 }
 
@@ -145,7 +152,7 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   position: relative;
   overflow: hidden;
-  font-family: "Nosifer", cursive;
+  font-family: "Fredoka", cursive;
 }
 
 .acquista-btn::before {
@@ -250,10 +257,10 @@
 }
 
 .submit-btn {
-  background-color: #8b0000;
+  background-color: #ff4500;
   color: white;
   border: 2px solid #400000;
-  font-family: "Nosifer", cursive;
+  font-family: "Fredroka", cursive;
   font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -262,7 +269,8 @@
   border-radius: 10px;
 }
 .submit-btn:hover {
-  background-color: #6b0000;
+  background-color: #ff44009c;
+  transition: all 0.5s ease;
   transform: translateY(-3px);
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
 }
@@ -349,14 +357,14 @@
 }
 
 h1 {
-  font-family: "Nosifer", cursive;
+  font-family: "Unkempt", cursive;
   text-align: center;
   letter-spacing: 2px;
   font-size: 3.2rem;
   background-image: linear-gradient(
     to bottom,
-    rgb(156, 0, 0) 0%,
-    rgb(75, 0, 0) 100%
+    rgb(249, 36, 36) 0%,
+    rgb(255, 0, 0) 100%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -364,9 +372,9 @@ h1 {
   color: transparent;
 }
 h2 {
-  font-family: "Eater", cursive;
+  font-family: "Unkempt", cursive;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
 }
 
 hr {
