--- a/sito-web-laboratorio/styles/navbar_style.css
+++ b/sito-web-laboratorio/styles/navbar_style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Eater&display=swap');
-
 /* Responsive Navigation */
 header {
   width: 100%;
@@ -10,7 +8,7 @@ header {
 }
 
 nav {
-  font-family: 'Eater', cursive;
+  font-family: "Fredoka", cursive;
   background-color: rgba(0, 0, 0, 0.7);
   color: white;
   padding: 1rem;
