--- a/sito-web-laboratorio/styles/formazione_styles.css
+++ b/sito-web-laboratorio/styles/formazione_styles.css
@@ -92,7 +92,7 @@ nav ul li a.active {
 }
 
 h1 {
-  font-family: "Creepster", cursive;
+  font-family: "Unkempt", cursive;
   text-align: center;
   letter-spacing: 2px;
   font-size: 3.2rem;
@@ -108,7 +108,7 @@ h1 {
 }
 
 h2 {
-  font-family: "Creepster", cursive;
+  font-family: "Unkempt", cursive;
   text-align: center;
   letter-spacing: 2px;
   font-size: 1.7rem;
@@ -131,7 +131,7 @@ h2 {
 }
 
 .timeline-event {
-  font-family: "Orbitron", sans-serif;
+  font-family: "Unkempt", cursive;
   margin-bottom: 20px;
   padding: 15px;
   background-color: #64727a;
