--- a/sito-web-laboratorio/styles/cosplay_styles.css
+++ b/sito-web-laboratorio/styles/cosplay_styles.css
@@ -42,8 +42,6 @@
   line-height: 0.8;
 }
 
-/* Rest of the CSS from the previous implementation, with some additions */
-
 .timeline {
   max-width: 800px;
   margin: 0 auto;
@@ -56,7 +54,7 @@
   font-family: "Unkempt", sans-serif;
   margin-bottom: 20px;
   padding: 15px;
-  background-color: #c4c8ca;
+  background-color: #cccccc;
   border-radius: 5px;
 }
 
@@ -101,9 +99,10 @@
   width: 300px;
   margin: 15px;
   padding: 20px;
-  background-color: #c4c8ca;
+  background-color: #64727a;
   border-radius: 10px;
   text-align: center;
+  color: rgb(230, 230, 230);
 }
 
 #registrazione-cosplay form {
@@ -261,8 +260,23 @@ h2 {
   font-size: 1.7rem;
   background-image: linear-gradient(
     to bottom,
-    rgb(68, 1, 88) 0%,
-    rgb(17, 0, 32) 100%
+    rgb(204, 14, 0) 0%,
+    rgb(241, 177, 0) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+}
+
+h3 {
+  font-family: "Unkempt", cursive;
+  letter-spacing: 2px;
+  font-size: 1.2rem;
+  background-image: linear-gradient(
+    to bottom,
+    rgb(255, 72, 0) 0%,
+    rgb(94, 0, 0) 100%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
