--- a/sito-web-laboratorio/styles/games_styles.css
+++ b/sito-web-laboratorio/styles/games_styles.css
@@ -2,7 +2,7 @@
   max-width: 1200px;
   margin: 40px auto;
   padding: 20px;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #64727a;
   border-radius: 15px;
   border: 2px solid #8b0000;
 }
@@ -43,7 +43,7 @@
 }
 
 .detail {
-  background-color: rgba(139, 0, 0, 0.3);
+  background-color: #333a3d;
   padding: 8px 15px;
   border-radius: 5px;
   margin: 5px 0;
@@ -55,7 +55,7 @@
   border-radius: 10px;
   overflow: hidden;
   border: 2px solid #8b0000;
-  background-color: rgba(139, 0, 0, 0.2);
+  background-color: rgba(236, 67, 0, 0.2);
   transition: transform 0.3s ease;
 }
 
@@ -80,7 +80,7 @@
   background: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0.3),
-    rgba(139, 0, 0, 0.7)
+    rgba(175, 106, 85, 0.7)
   );
   display: flex;
   align-items: flex-end;
@@ -116,7 +116,7 @@
 }
 
 .developer-card {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #64727a;
   border: 2px solid #8b0000;
   border-radius: 10px;
   padding: 20px;
@@ -156,7 +156,7 @@
 }
 
 .schedule-item {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #64727a;
   border: 2px solid #8b0000;
   border-radius: 10px;
   padding: 20px;
@@ -172,6 +172,7 @@
 .time {
   font-family: "Unkempt", cursive;
   color: #ff4500;
+  font-weight: bold;
   font-size: 1.2em;
   min-width: 150px;
 }
@@ -180,7 +181,7 @@
   max-width: 600px;
   margin: 40px auto;
   padding: 20px;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #64727a;
   border-radius: 10px;
   border: 2px solid #8b0000;
 }
