--- a/sito-web-laboratorio/styles/contatti_styles.css
+++ b/sito-web-laboratorio/styles/contatti_styles.css
@@ -60,7 +60,7 @@ header {
 }
 
 .main-title .title {
-  color: #ffa31a;
+  color: #d62000;
   font-size: 2.5rem;
   font-weight: bold;
   text-align: center; /* Colore per il primo titolo */
