--- a/sito-web-laboratorio/styles/conference_styles.css
+++ b/sito-web-laboratorio/styles/conference_styles.css
@@ -10,7 +10,7 @@
 
 .schedule-day h2 {
   font-family: "Unkempt", cursive;
-  color: #8b0000;
+  color: rgb(249, 36, 36);
   text-align: center;
   margin-bottom: 20px;
   font-size: 2em;
@@ -83,7 +83,7 @@
 }
 
 .submit-btn {
-  background-color: #8b0000;
+  background-color: #ff4500;
   color: white;
   padding: 15px;
   border: none;
