--- a/sito-web-laboratorio/styles/games_styles.css
+++ b/sito-web-laboratorio/styles/games_styles.css
@@ -167,7 +167,7 @@
 }
 #schedule h2 {
   text-align: center;
-  color: #8b0000;
+  color: rgb(249, 36, 36);
 }
 .time {
   font-family: "Unkempt", cursive;
@@ -202,6 +202,29 @@
   background-color: rgba(255, 255, 255, 0.9);
 }
 
+.submit-btn {
+  background-color: #ff4500;
+  color: white;
+  border: 2px solid #400000;
+  font-family: "Fredroka", cursive;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border-radius: 10px;
+}
+.submit-btn:hover {
+  background-color: #ff44009c;
+  transition: all 0.5s ease;
+  transform: translateY(-3px);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+}
+
+.submit-btn:active {
+  transform: translateY(1px);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 @media screen and (max-width: 768px) {
   .featured-content {
     flex-direction: column;
